--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="col-lg-12 text-center">
                        <div style="background-color:#C02942">
                         <video autoplay="">
-                            <source src="bu.mp4" type="video/mp4" style="width:100%">
+                           <iframe src="https://player.vimeo.com/video/143975591?title=0&byline=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </video>
                         <div class="promo promo-light promo-full bottommargin-lg header-stick">
                             <div class="container clearfix">
